# PikaAnyArm

./: CHANGELOG.md  README.md
piper/pika_remote_piper/: CMakeLists.txt
piper/pika_remote_piper/launch/: teleop_rand_multi_piper.launch  teleop_rand_multi_piper_x.launch  teleop_rand_single_piper.launch  teleop_rand_single_piper_x.launch  test_remote_sim.launch  test_remote_sim.launch.py
piper/pika_remote_piper/scripts/: forward_inverse_kinematics.py  piper_FK.py  piper_IK.py  teleop_piper_publish.py  test_piper_sim.py
piper/piper_ros/: can_config.sh
piper/piper_ros/piper_x_description/: CMakeLists.txt  package.xml
piper/piper_ros/piper_x_description/launch/: display.rviz
piper/piper_ros/piper_x_description/urdf/: piper_x_description.urdf
remote_operation/launch/: teleop_double_ur.launch  teleop_ur12e.launch  teleop_ur12e_whit_gripper.launch
remote_operation/scripts/: piper_IK.py  piper_ik.py  teleop_piper_publish.py  teleop_ur.py
ur/pika_remote_ur/: CMakeLists.txt  package.xml
ur/pika_remote_ur/config/: ur12e_params.yaml  ur7e_params.yaml
ur/pika_remote_ur/launch/: teleop_double_ur.launch  teleop_ur12e.launch  teleop_ur12e_whit_gripper.launch
ur/pika_remote_ur/scripts/: teleop_ur.py  ur_control.py
xarm/pika_remote_xarm/: CMakeLists.txt  package.xml
xarm/pika_remote_xarm/launch/: teleop_single_xarm.launch
